text overflow fixed on technology select

--- a/client/stylesheets/scss/main.scss
+++ b/client/stylesheets/scss/main.scss
@@ -61,11 +61,18 @@ div.page {
 
 					div.feature-header {
 						margin-bottom: 10px;
+						height: 80px;
 						color: #555;
+						overflow: auto;
 
 						h4 {
 							float: left;
 							margin: 0;
+							width: calc(100% - 18px);
+							height: 80px;
+							text-overflow: ellipsis;
+							overflow: hidden;
+							white-space: nowrap;
 							font-weight: normal;
 							font-size: 0.8em;
 							line-height: 80px;
@@ -73,6 +80,7 @@ div.page {
 							-moz-user-select: none;
 							-khtml-user-select: none;
 							-ms-user-select: none;
+
 						}
 						i {
 							float: right;
